Fix global-header alignment

--- a/_sass/airspace/_main.scss
+++ b/_sass/airspace/_main.scss
@@ -445,7 +445,6 @@ header .btn:hover {
 #global-header .block {
 	color: #e3e3e4;
 	margin: 0 auto;
-	padding-left: 90px;
 	text-align: center;
 }
 #global-header .block h1 {
